--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,13 @@
 # Get your API key from https://0g.ai or your 0G provider
 ZERO_G_API_KEY=your_0g_key_here
 
-# Ethereum RPC URLs
-# Sepolia testnet (for testnet deployments)
-RPC_URL_SEPOLIA=https://sepolia.infura.io/v3/YOUR_INFURA_KEY
-# Or use a public RPC: https://rpc.sepolia.org
+# 0G network (agent uses this for inference)
+# Mainnet (real 0G token):
+# 0G_RPC_URL=https://evmrpc.0g.ai
+# Testnet (faucet tokens): omit 0G_RPC_URL or set:
+# 0G_RPC_URL=https://evmrpc-testnet.0g.ai
+# Legacy / other: RPC_URL_SEPOLIA is fallback if 0G_RPC_URL not set
+RPC_URL_SEPOLIA=https://evmrpc-testnet.0g.ai
 
 # Deployment
 # Private key for testnet deployments (NEVER commit this to git)
