Docker foundry container

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ PRIVATE_KEY_DEPLOYER=0x...
 
 # Optional: Mainnet RPC (read-only analysis)
 # RPC_URL_MAINNET=https://mainnet.infura.io/v3/YOUR_INFURA_KEY
+
+# Foundry Sandbox
+# Docker sandbox is ON by default. Set to false for local dev without Docker.
+# USE_DOCKER_SANDBOX=false
+# FORGE_DOCKER_IMAGE=prophet-forge
+# FORGE_TIMEOUT_MS=120000
