--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,7 +64,11 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.11",
-    "siwe": "^3.0.0"
+    "siwe": "^3.0.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "wagmi": "^2.12.0",
+    "viem": "^2.21.0",
+    "@tanstack/react-query": "^5.59.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.2.0",
