--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ PRIVATE_KEY_DEPLOYER=0x...
 # Optional: Mainnet RPC (read-only analysis)
 # RPC_URL_MAINNET=https://mainnet.infura.io/v3/YOUR_INFURA_KEY
 
+# 0G Storage (decentralized audit persistence)
+# Indexer endpoint for 0G storage network
+ZG_INDEXER_RPC=https://indexer-storage-testnet-turbo.0g.ai
+
 # Foundry Sandbox
 # Docker sandbox is ON by default. Set to false for local dev without Docker.
 # USE_DOCKER_SANDBOX=false
