--- a/agent/package.json
+++ b/agent/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@0glabs/0g-serving-broker": "^0.7.1",
+    "@0glabs/0g-ts-sdk": "0.3.3",
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.3.1",
