added test cases and improved deployment

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,4 +1,6 @@
 DATABASE_URL="file:./dev.db"
 AUTH_SECRET="change-me-dev-secret"
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID="demo"
+# Use local agent (8 fix attempts, etc.); omit to use Render agent
+# NEXT_PUBLIC_AGENT_URL="http://localhost:3001"
 
